feat: initial commit

--- a/angular.json
+++ b/angular.json
@@ -77,25 +77,11 @@
           "options": {
             "browserTarget": "frontend-angular-interview:build"
           }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "66a66501-3b46-44ad-8465-b535e47eed32"
   }
 }
