--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,18 +1,17 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
-  },
+  "outDir": "./out-tsc/spec",
+  "baseUrl": "./",
+  "module": "commonjs",
+  "target": "es5",
+  "types": [
+  "jest",
+  "node"
+]
+},
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "src/test.ts"
+],
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
