--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest --no-cache --changedFilesWithAncestor",
+    "test": "jest",
     "test:watch": "jest --watch",
-    "test:cc": "jest --coverage",
-    "prettier:check": "prettier --check src/**/*.{js,ts,json,css,scss}",
-    "prettier:write": "prettier --write src/**/*.{js,ts,json,css,scss}",
-    "prettier:staged": "pretty-quick --staged",
-    "lint:staged": "lint-staged"
+    "test:cc": "jest --coverage"
   },
   "author": {
     "name": "Web Platform Team - Vodafone Spain"
@@ -37,22 +33,10 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
     "@types/jest": "^29.1.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.3",
     "jest-canvas-mock": "^2.3.1",
     "jest-preset-angular": "^12.2.2",
-    "husky": "^4.3.8",
-    "prettier": "^2.4.0",
-    "prettier-eslint": "^13.0.0",
-    "pretty-quick": "^3.1.2",
     "typescript": "~4.7.2"
-  },
-  "lint-staged": {
-    "*.{js,ts}": "eslint --cache --fix"
   }
 }
